--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,3 +1,22 @@
 .header{
     text-align: center;
 }
+
+.main-content{
+    display: flex;
+    justify-content: center;
+}
+
+.keyboard{
+    width: 300px;
+}
+
+.button{
+    width: 50px;
+    height: 50px;
+    margin: 3px;
+}
+
+.button:hover{
+    cursor: pointer;
+}
