--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -6,6 +6,7 @@
     display:flex;
     flex-direction: row;
     width: 150px;
+    margin-right: 5px;
 }
 
 .main-content{
@@ -30,3 +31,34 @@
 .button:hover{
     cursor: pointer;
 }
+
+.hangman-gif{
+   height: 650px;
+   width: 550px;
+}
+
+.welcome-screen{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 40px;
+}
+
+.button-start{
+    margin-top:50px;
+    width: 150px;
+    height: 50px;
+    border: none;
+    border-radius:10px;
+    cursor: pointer;
+}
+
+.button-start:hover{
+    background-color:lightyellow;
+}
+
+h1{
+    margin-top: 50px;
+    font-size:40px;
+}
+
