--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -12,6 +12,14 @@
 .main-content{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items:center;
+}
+
+.game-content{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
 }
 
 .picked-letter{
@@ -22,7 +30,7 @@
     width: 300px;
 }
 
-.button{
+.keyboard-button{
     width: 50px;
     height: 50px;
     margin: 3px;
@@ -44,7 +52,7 @@
     font-size: 40px;
 }
 
-.button-start{
+.button-start-reset{
     margin-top:50px;
     width: 150px;
     height: 50px;
