--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,72 +1,118 @@
-.header{
+.whole-game-modal {
+    margin-left: 400px;
+    margin-right: 400px;
+    background-color: #ffffff;
+    background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 1) 13%, rgba(255, 255, 255, 1) 87%, rgba(0, 0, 0, 1) 100%);
+}
+
+.tittle {
+    text-align: center;
+    padding: 60px;
+    color: white;
+    animation: appear-animation 1.5s;
+    transition: all .3s ease-in-out;
+    animation-fill-mode: both;
+}
+
+.header {
     text-align: center;
 }
 
-.used-letters{
-    display:flex;
+.used-letters {
+    display: flex;
     flex-direction: row;
     width: 150px;
     margin-right: 5px;
 }
 
-.main-content{
+.main-content {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items:center;
+    align-items: center;
 }
 
-.game-content{
+.game-content {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-direction: row;
+    width: 100%;
 }
 
-.picked-letter{
+.picked-letter {
     margin-right: 3px;
 }
 
-.keyboard{
-    width: 300px;
+.keyboard {
+    width: 350px;
 }
 
-.keyboard-button{
+.keyboard-button {
     width: 50px;
     height: 50px;
     margin: 3px;
 }
 
-.button:hover{
+.button:hover {
     cursor: pointer;
 }
 
-.hangman-gif{
-   height: 650px;
-   width: 550px;
+.hangman-gif {
+    height: 650px;
+    width: 550px;
+    animation: appear-animation 1.5s;
+    transition: all .3s ease-in-out;
 }
 
-.welcome-screen{
+.welcome-screen {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 40px;
 }
 
-.button-start-reset{
-    margin-top:50px;
+@keyframes appear-animation {
+    from {opacity: 0}
+    to {opacity: 1}
+}
+
+@keyframes enter-game-animation-top {
+    from {}
+    to {margin-top: -1500px}
+}
+
+@keyframes animation-go-bootom {
+    from {opacity: 1}
+    to {opacity: 0}
+}
+
+.button-start-reset {
+    margin-top: 50px;
     width: 150px;
     height: 50px;
     border: none;
-    border-radius:10px;
+    border-radius: 10px;
     cursor: pointer;
+    position: absolute;
+    bottom: 10px;
 }
 
-.button-start:hover{
-    background-color:lightyellow;
+.button-start-reset-animation {
+    animation: appear-animation 1.5s;
+    transition: all .3s ease-in-out;
+    animation-fill-mode: both;
 }
 
-h1{
+.enter-game-animation-bottom {
+    animation: animation-go-bootom 1.0s;
+    transition: all .3s ease-in-out;
+    animation-fill-mode: forwards;
+ }
+.button-start:hover {
+    background-color: lightyellow;
+}
+
+h1 {
     margin-top: 50px;
-    font-size:40px;
+    font-size: 40px;
 }
-
