--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: row;
     width: 150px;
-    margin-right: 5px;
+    margin: 0 5px 15px 0;
 }
 
 .main-content {
@@ -41,6 +41,13 @@
     justify-content: space-evenly;
     flex-direction: row;
     width: 100%;
+}
+
+.used-letter-and-score-section{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-self: start;
 }
 
 .picked-letter {
@@ -118,4 +125,14 @@
 h1 {
     margin-top: 50px;
     font-size: 40px;
+}
+
+.add-player-to-scoreboard {
+    width: 400px;
+    height: 300px;
+    background-color: grey;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: auto;
 }
