--- a/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
+++ b/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
@@ -1,9 +1,22 @@
-/* .add-player-to-scoreboard {
-    width: 400px;
-    height: 300px;
-    background-color: grey;
+.component-background {
+    background: gray;
+    height: 100vh;
+    width: 100vw;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: auto;
-} */
+    left: 0;
+    top: 0;
+    background: rgba(192,192,192, .5);
+}
+
+.add-player-to-scoreboard {
+    position: unset;
+    width: 55vw;
+    height: 70vh;
+    background-color: black;
+    margin-top: 10%;
+    padding-top: 1px;
+    border-radius: 38px;
+}
+
+
+
