--- a/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
+++ b/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
@@ -28,5 +28,14 @@
     cursor: pointer;
 }
 
+.scores-displaying {
+  display: flex;
+  justify-content: center;
+  font-size: 1.7em;
+}
+
+.scores-displaying-single-element {
+  margin: 10px;
+  }
 
 
