--- a/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
+++ b/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
@@ -5,7 +5,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: rgba(192,192,192, .5);
+    background: rgba(192, 192, 192, 0.5);
 }
 
 .add-player-to-scoreboard {
@@ -24,18 +24,56 @@
     padding: 0 25px;
 }
 
-.button{
+.button {
     cursor: pointer;
 }
 
 .scores-displaying {
-  display: flex;
-  justify-content: center;
-  font-size: 1.7em;
+    display: flex;
+    justify-content: center;
+    font-size: 1.7em;
 }
 
 .scores-displaying-single-element {
-  margin: 10px;
-  }
+    margin: 10px;
+}
 
+.add-score-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 90px;
+}
 
+.input-section {
+    flex-direction: row;
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.name-input {
+    height: 30px;
+    width: 250px;
+    font-size: 24px;
+    font-family:retroFont;
+    border-radius: 5px;
+    background: unset;
+    border: 2px solid white;
+    color: white;
+}
+
+.score {
+    align-self: center;
+    justify-self: center;
+    margin-left: 20px;
+    font-size: 27px;
+}
+
+.button-save{
+    margin-top: 10px;
+    width: 150px;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
