--- a/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
+++ b/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
@@ -38,11 +38,43 @@
     margin: 10px;
 }
 
+.podium {
+    font-size: 1.7em;
+    margin: 0 30px;
+    background-image: url('../../assets/podium.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 230px;
+}
+
+.first-place {
+    display: flex;
+    justify-content: center;
+    width: 33%;
+    color: gold;
+    margin: 0 33%;
+}
+
+.second-place {
+    display: flex;
+    justify-content: flex-start;
+    width: 33%;
+    color: silver;
+}
+
+.third-place {
+    display: flex;
+    justify-content: flex-end;
+    width: 33%;
+    color: rgb(139, 73, 29);
+    margin-left: 66%;
+}
+
 .add-score-section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 90px;
+    margin-top: 20px;
 }
 
 .input-section {
