--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -84,7 +84,7 @@ button:hover {
 }
 
 .button-start-reset {
-    width: 150px;
+    min-width: 150px;
     height: 50px;
     border: none;
     border-radius: 10px;
