--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -6,7 +6,7 @@
 }
 
 .game-state {
-    height: 350px;
+    height: 270px;
 }
 
 .title {
@@ -25,7 +25,8 @@
 .used-letters {
     display: flex;
     flex-direction: row;
-    width: 150px;
+    flex-wrap: wrap;
+    width: 250px;
     margin: 0 5px 15px 0;
 }
 
@@ -83,11 +84,12 @@ button:hover {
 }
 
 .button-start-reset {
-    width: 150px;
+    min-width: 150px;
     height: 50px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    margin: 5px;
 }
 
 .open-animation {
