--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,43 @@
-.App {
-  height: 100%;
-  min-height: 100vh; 
-  background-image: url("./assets/background.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  overflow-x: hidden;
+@media only screen and (min-width: 1400px) {
+  .App {
+    height: 100%;
+    min-height: 100vh; 
+    background-image: url("./assets/background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
+  }
+}
+
+@media only screen and (max-width: 1399px) {
+  .App {
+    height: 100%;
+    min-height: 100vh; 
+    background-image: url("./assets/background3.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .App {
+    height: 100%;
+    min-height: 100vh; 
+    background-image: url("./assets/background4.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .App {
+    height: 100%;
+    min-height: 100vh; 
+    background: black;
+    overflow-x: hidden;
+  }
 }
 
 @font-face{
