--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   background-image: url("./assets/background.png");
   background-size: cover;
