--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,11 +1,12 @@
-.whole-game-modal {
-    margin-left: 450px;
-    margin-right: 450px;
+.game {
+    margin-left: 400px;
+    margin-right: 400px;
+    margin-top:60px;
     background-color: #000000;
-    color: #ffffff
+    color: #ffffff;
 }
 
-.game-state {
+.game-state-image {
     height: 270px;
 }
 
@@ -14,7 +15,7 @@
     padding: 60px;
     color: white;
     animation: appear-animation 1.5s;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     animation-fill-mode: both;
 }
 
@@ -22,79 +23,44 @@
     text-align: center;
 }
 
-.used-letters {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 250px;
-    margin: 0 5px 15px 0;
-}
-
-.main-content {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.game-content {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    width: 100%;
-}
-
-.button-section{
-    position: absolute;
-    bottom: 40px;
-    display: flex;
-    justify-content: space-between;
-    width: 20%;
-}
-
-.used-letter-and-score-section{
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-self: start;
-}
-
-.picked-letter {
-    margin-right: 3px;
-}
-
-.keyboard {
-    width: 350px;
+h3 {
+    font-size: 18px !important;
 }
 
 .keyboard-button {
     width: 45px;
     height: 45px;
     margin: 3px;
+    border: none;
+    border-radius: 10px;
 }
 
 button:hover {
     cursor: pointer;
+    background-color: lightyellow;
 }
 
 @keyframes appear-animation {
-    from {opacity: 0}
-    to {opacity: 1}
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .button-start-reset {
     min-width: 150px;
     height: 50px;
+    margin: 5px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    margin: 5px;
 }
 
 .open-animation {
-    animation: appear-animation 5.0s;
-    transition: all .3s ease-in-out;
+    animation: appear-animation 5s;
+    transition: all 0.3s ease-in-out;
     animation-fill-mode: both;
 }
 
@@ -103,17 +69,9 @@ button:hover {
 }
 
 .displayed-word {
-    margin-top: 30px;
     font-size: 40px;
 }
 
 .add-player-to-scoreboard {
-    text-align: center;
-    width: 400px;
-    height: 300px;
-    background-color: grey;
-    position: absolute;
-    top: 50%;
-    left: 50%;
     margin: auto;
 }
