--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -14,9 +14,6 @@
 }
 
 .welcome-screen {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     font-size: 40px;
 }
 
@@ -25,13 +22,14 @@
     to {opacity: 1}
 }
 
-.button {
+.language-button {
     width: 150px;
     height: 50px;
     border: none;
     border-radius: 10px;
-    margin:10px;
+    margin: 10px;
     cursor: pointer;
+    font-size: 14px;
 }
 
 .open-animation {
@@ -51,7 +49,7 @@
     animation-fill-mode: forwards;
  }
 
-.button-start-reset:hover {
+.language-button:hover {
     background-color: lightyellow;
 }
 
