--- a/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
+++ b/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.css
@@ -93,7 +93,11 @@
     font-size: 27px;
 }
 
-.button-save{
+.button-save:hover {
+    background-color: lightyellow;
+}
+
+.button-save, .save-button-highlight-disabled {
     width: 150px;
     height: 50px;
     border: none;
@@ -101,9 +105,10 @@
     cursor: pointer;
 }
 
-.button-save:hover {
-    background-color: lightyellow;
+.save-button-highlight-disabled:hover {
+    background-color: #EFEFEF4D;
 }
+
 
 .low-score-info {
     text-align: center;
