--- a/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.scss
+++ b/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.scss
@@ -16,11 +16,10 @@
     margin-top: 60px;
     padding: 20px 40px;
     border-radius: 38px;
-}
-
-.add-player-to-scoreboard-title {
-    font-size: 25px;
-    text-align: center;
+    &-title {
+        font-size: 25px;
+        text-align: center;
+    }
 }
 
 .button {
@@ -29,19 +28,17 @@
     height: 40px;
     border: none;
     border-radius: 10px;
-}
-
-.button:hover{
-    background-color: lightyellow;
+    &:hover {
+        background-color: lightyellow;
+    }
 }
 
 .scores-displaying {
     font-size: 1.7em;
-}
-
-.scores-displaying-single-element {
-    margin: 10px;
-    font-size: 16px;
+    &-single-element {
+        margin: 10px;
+        font-size: 16px;
+    }
 }
 
 .first-place {
@@ -108,7 +105,6 @@
 .save-button-highlight-disabled:hover {
     background-color: #EFEFEF4D;
 }
-
 
 .low-score-info {
     text-align: center;
