Working time mode

--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -6,6 +6,12 @@
     color: #ffffff;
 }
 
+.timer-box {
+    background-color: #000000;
+    color: #ffffff;
+}
+
+
 .game-state-image {
     height: 270px;
 }
