--- a/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.scss
+++ b/src/components/AddPlayerToScoreboard/AddPlayerToScoreboard.scss
@@ -3,12 +3,14 @@
     height: 100vh;
     width: 100vw;
     position: absolute;
+    z-index: 200;
     left: 0;
     top: 0;
     background: rgba(192, 192, 192, 0.5);
 }
 
 .add-player-to-scoreboard {
+    z-index: 200;
     position: unset;
     width: 75vw;
     min-height: 80vh;
